@@ -73,8 +73,13 @@ if context.hasStopDate():\n
 else:\n
   kw = {}\n
 \n
+sender = portal.portal_preferences.getPreferredSenderSection()\n
+if sender is not None:\n
+  sender = portal.restrictedTraverse(sender)\n
+\n
 portal.portal_password.mailPasswordResetRequest(user_login=reference,\n
                                                 REQUEST=context.REQUEST,\n
+                                                sender=sender,\n
                                                 notification_message=notification_message,\n
                                                 store_as_event=portal.portal_preferences.isPreferredStoreEvents(),\n
                                                 **kw)\n
