@@ -63,9 +63,12 @@ for person in person_list:\n
 usernames = " ".join(usernames)\n
 \n
 reference_list = [x.getReference() for x in person_list]\n
-message_reference = portal.portal_preferences.getPreferredCredentialUsernameRecoveryMessageReference()\n
-if message_reference is None:\n
-  raise ValueError, "Preference not configured"\n
+if context.hasDocumentReference():\n
+  message_reference = context.getDocumentReference()\n
+else:\n
+  message_reference = portal.portal_preferences.getPreferredCredentialUsernameRecoveryMessageReference()\n
+  if message_reference is None:\n
+    raise ValueError, "Preference not configured"\n
 \n
 notification_message = portal.NotificationTool_getDocumentValue(message_reference,\n
                                                                 context.getLanguage())\n
@@ -80,7 +83,12 @@ else:\n
 \n
 subject = notification_message.asSubjectText(substitution_method_parameter_dict={\'mapping_dict\':mapping_dict})\n
 \n
+sender = portal.portal_preferences.getPreferredSenderSection()\n
+if sender is not None:\n
+  sender = portal.restrictedTraverse(sender)\n
+\n
 portal.portal_notifications.sendMessage(\n
+  sender=sender,\n
   recipient=person_list,\n
   subject=subject,\n
   message=mail_text,\n
