@@ -85,8 +85,12 @@ else:\n
     substitution_method_parameter_dict={\'mapping_dict\':notification_mapping_dict})\n
 \n
 #Send email\n
+sender = portal.portal_preferences.getPreferredSenderSection()\n
+if sender is not None:\n
+  sender = portal.restrictedTraverse(sender)\n
+\n
 portal.portal_notifications.sendMessage(\n
-  sender=None,\n
+  sender=sender,\n
   recipient=recipient,\n
   subject=notification_message.getTitle(),\n
   message=mail_text,\n
