@@ -60,9 +60,10 @@ Member -- Use mailhost service\n
 """\n
 \n
 from random import randint\n
+portal = context.getPortalObject()\n
 \n
 #Get message\n
-notification_message = context.portal_catalog.getResultValue(portal_type="Notification Message",\n
+notification_message = portal.portal_catalog.getResultValue(portal_type="Notification Message",\n
                                                              reference=notification_reference)\n
 notification_message_reference = randint(0, 999**9)\n
 \n
@@ -79,7 +80,12 @@ else:\n
   mail_text = notification_message.asText(\n
     substitution_method_parameter_dict={\'mapping_dict\':mapping_dict})\n
 \n
-context.portal_notifications.sendMessage(\n
+sender = portal.portal_preferences.getPreferredSenderSection()\n
+if sender is not None:\n
+  sender = portal.restrictedTraverse(sender)\n
+\n
+portal.portal_notifications.sendMessage(\n
+  sender=sender,\n
   recipient=(context,),\n
   subject=notification_message.getTitle(),\n
   message=mail_text,\n
