@@ -1,3 +1,6 @@
+2012-05-01 Kazuhiko
+* use prefered_sender_section for credential related messages if exist.
+
 2012-04-27 Kazuhiko
 * use document_reference in Credential Recovery as the reference of nofitication message if exists.
 
